NGO-37: fix header spacing and hero block label margin (#19)

--- a/src/components/shared/Header/Header.module.css
+++ b/src/components/shared/Header/Header.module.css
@@ -1,5 +1,6 @@
 .navLink {
   position: relative;
+  padding-bottom: 4px;
   font-weight: 500;
   font-size: 0.875rem;
   line-height: 1;
@@ -65,6 +66,8 @@
   font-size: 0.875rem;
   text-align: center;
   transition: opacity 0.15s;
+  margin-top: -4px;
+  display: inline-block;
 }
 
 .donateLinkActive {
